       approximated with Debye temperatures.
     * Add BO3H3_sg2_BoricAcid.ncmat, representing ortho boric acid. This
       includes both crystal structure and phonon DOS curves (github issue
       #284).
     * Guard file globbing on Windows against false matching short 8.3 format
       filenames (i.e. *.ncm should never match *.ncmat)..
     * ...

v4.2.2 2025-07-03
     * Support the unit "mu" (micron) in cfg-string length specifications.
     * Fix issue where MatCfg::get_ucnmode_str returned internal StrView
       class. This now returns std::string. This change is not considered ABI
       breaking, since no-one could have used the method without also including
       internal header files.
     * Fix stability of tests.

v4.2.0 2025-06-11
     * Add ncmat2endf functionality as a CLI script ncrystal_ncmat2endf and
       Python API access in the NCrystal.ncmat2endf module (github issue
       #183). This new feature allows for automatic export of NCrystal models
       into the ENDF-6 format. This ENDF (Evaluated Nuclear Data File) format is
       the traditional data format used in the Nuclear Data community, and
       ncmat2endf thus exists as a service to users of any nuclear radiation
       transport codes that do not currently have a direct integration with
       NCrystal, but who nonetheless wishes to take advantage of the material
       composition tools and larger data library of NCrystal.  For more
       information about this exciting new feature, please refer to the wiki
       page at https://github.com/mctools/ncrystal/wiki/ncmat2endf .
     * Remove upper pinning on ASE version which had been needed until ASE
       3.25.0 was released due to https://gitlab.com/ase/ase/-/issues/1597.
     * NCMATComposer.set_dyninfo_scatknl now supports new keyword argument
       "trim_edges", which if set will cause any rows or columns at the edge of
       the S(alpha,beta) table consisting strictly of zeroes to be trimmed off